--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -25,5 +25,21 @@ const { href, title, buttonTitle = "More infos" } = Astro.props as Props;
         padding: 1em 1.3em;
         background-color: white;
         margin-top: 10px;
+        cursor: pointer;
     }
 </style>
+
+<script>
+    import Swal from "sweetalert2";
+    document.querySelectorAll(".card").forEach((it) => {
+        it.addEventListener("click", async (e) => {
+            const card = e.currentTarget as HTMLDivElement;
+            await Swal.fire({
+                text:
+                    "clicked on card '" +
+                    card.querySelector("h2").innerText +
+                    "'",
+            });
+        });
+    });
+</script>
