--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,17 +4,16 @@ import Card from "../components/Card.astro";
 import Jumbotron from "../components/Jumbotron.astro";
 import Layout from "../layouts/Layout.astro";
 
-const response = await fetch(
+const data = await fetch(
     "https://jsonplaceholder.typicode.com/posts?_limit=10"
-);
-const data = await response.json();
+).then((r) => r.json());
 ---
 
 <Layout>
     <Jumbotron />
     <div class="container mx-auto p-6">
-        <Button href="/">Go back</Button>
-
+        <Button href="/" icon="fa fa-chevron-left">Go back</Button>
+        <Button href="#" icon="fas fa-refresh" id="reload-btn">Test btn</Button>
         {
             data.map((item) => (
                 <Card title={item.title}>
@@ -24,4 +23,15 @@ const data = await response.json();
         }
     </div>
 </Layout>
-<script></script>
+
+<script>
+    import Swal from "sweetalert2";
+    document
+        .querySelector("#reload-btn")
+        ?.addEventListener("click", async (e) => {
+            e.preventDefault()
+            await Swal.fire({
+                title: "Test",
+            });
+        });
+</script>
